# EdgeVision

./: README.md
EdgeView/: README.md  package.json  tsconfig.json
EdgeView/app/: CMakeLists.txt  build.gradle
EdgeView/app/src/main/: AndroidManifest.xml
EdgeView/app/src/main/cpp/: gl_renderer.cpp  native-lib.cpp  opencv_processor.cpp
EdgeView/app/src/main/java/com/edgevision/pro/: CameraManager.kt  FPSCounter.kt  GLRenderer.kt  MainActivity.kt
EdgeView/app/src/main/res/layout/: activity_main.xml
EdgeView/app/src/main/res/values/: strings.xml  themes.xml
EdgeView/gl/shaders/: edge_fragment.glsl  fragment.glsl  vertex.glsl
EdgeView/jni/: gl_renderer.h  opencv_processor.h
EdgeView/web/: index.html  styles.css
